# event-finder-flask

./: .gitignore  Dockerfile  README.md  clean_pycache.py  docker-compose.yaml  project_info.toml  pyproject.toml  pytest.ini  reqirements.txt  requirements.txt
app/: __init__.py  config.py  container.py  extensions.py
app/configuration/: config.py  event_listeners.py  model_type.py
app/controllers/: app_controller.py  event_controller.py  user_controller.py
app/error_handler/: error_handler.py  exceptions.py
app/models/: event.py  user.py
app/repositories/: base_repository.py  event_repository.py  user_repository.py
app/routes/: app_route.py  event_route.py  user_route.py
app/schemas/: event_schema.py  user_schema.py
app/services/: app_service.py  auth_service.py  chat_service.py  event_service.py  user_service.py
app/services/model/: model_service.py
app/services/model/cloud/: cloud_model_service.py
app/services/model/local/: local_model_service.py
app/util/: embedding_util.py  model_util.py  validaton_util.py
migrations/versions/: 3ee5d6537bb1_initial_schema.py  960af8e5c7b5_event_embdeddings.py  dcefbdf2f6e1_event_embdeddings.py  e4ab6030d8f4_adjust_embedding_dim_for_local_model.py  ebd66b30005a_removed_index_for_embeddings.py
tests/: conftest.py  test_container.py
tests/test_error_handlers/: test_error_handler.py
tests/test_repositories/: test_event_repository.py  test_user_repository.py
tests/test_routes/: auth_data.py  test_app_route.py  test_event_route.py  test_user_route.py
tests/test_schemas/: test_event_schema.py  test_user_schema.py
tests/test_services/: test_app_service.py  test_event_service.py  test_user_service.py
