# pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name             = "event-finder"
version          = "0.0.1"
description      = "A Flask-based Event Finder API with PGVector-powered RAG"
readme           = "README.md"
license          = { text = "MIT" }
authors          = [{ name="Mile", email="demo@xml.com" }]
requires-python  = ">=3.10"

dependencies = [
  "aniso8601==10.0.1",
  "attrs==25.3.0",
  "bcrypt==4.3.0",
  "blinker==1.9.0",
  "click==8.1.8",
  "colorama==0.4.6",
  "dependency-injector==4.46.0",
  "Flask==3.1.0",
  "Flask-Bcrypt==1.0.1",
  "Flask-HTTPAuth==4.8.0",
  "Flask-JWT-Extended==4.7.1",
  "flask-marshmallow==1.3.0",
  "flask-restx==1.3.0",
  "Flask-SQLAlchemy==3.1.1",
  "greenlet==3.2.1",
  "gunicorn==23.0.0",
  "importlib_resources==6.5.2",
  "iniconfig==2.1.0",
  "itsdangerous==2.2.0",
  "Jinja2==3.1.6",
  "jsonschema==4.23.0",
  "jsonschema-specifications==2025.4.1",
  "MarkupSafe==3.0.2",
  "marshmallow==4.0.0",
  "marshmallow-sqlalchemy==1.4.2",
  "packaging==25.0",
  "pluggy==1.6.0",
  "PyJWT==2.10.1",
  "python-dotenv==1.1.0",
  "pytz==2025.2",
  "referencing==0.36.2",
  "rpds-py==0.24.0",
  "SQLAlchemy==2.0.40",
  "typing_extensions==4.13.2",
  "Werkzeug==3.1.3",

  # ─── Migration tooling ─────────────────────────────────────────────────────
  "Flask-Migrate==4.1.0",
  "alembic==1.16.1",
  "Mako==1.3.10",

  # ─── extras for RAG & PostgresVector ──────────────────────────────────────
  "openai",
  "psycopg2-binary",
  "pgvector",
]

[project.optional-dependencies]
testing = [
  "coverage==7.8.0",
  "pytest==8.3.5",
  "pytest-flask==1.3.0",
]
